ci: Add graalvm presubmit configs (#3077)
* ci: Add graalvm presubmit configs

* chore: Update graalmv build command

* chore: Update graalmv build command

* chore: Set return code

* chore: Add GraalVM configs

* chore: Use customNative profile

* chore: Remove junit-vintage-engine

* chore: Add additional graalvm config for java.base

* chore: Add Java 17 configs

* chore: Add back junit-vintage-engine

* chore: Add back junit-vintage-engine

* chore: Use versions defined in native-shared-configs

* chore: Add reflect config files

* chore: generate libraries at Fri Aug 22 15:49:23 UTC 2025

* chore: Add resource config files

* chore: Move graalvm configs to the biquerystorage pom

* chore: Add owlbot preserve for native files

* Revert "chore: generate libraries at Fri Aug 22 15:49:23 UTC 2025"

This reverts commit e9d88de407e4c87e51713c824375c4e80266f248.

* chore: generate libraries at Fri Aug 22 20:36:16 UTC 2025

* chore: Add owlbot preserve for native files

* Revert "chore: generate libraries at Fri Aug 22 20:36:16 UTC 2025"

This reverts commit dbd7d162881f868000df727e6b96f35574f12709.

* chore: generate libraries at Fri Aug 22 20:53:57 UTC 2025

* chore: Add owlbot preserve for native files

* Revert "chore: generate libraries at Fri Aug 22 20:53:57 UTC 2025"

This reverts commit 197baaeafdd3471a476ac43938f5b3e175328857.

* chore: generate libraries at Fri Aug 22 21:00:47 UTC 2025

* chore: Add owlbot preserve for native files

* Revert "chore: generate libraries at Fri Aug 22 21:00:47 UTC 2025"

This reverts commit 3895102924f8eafd03cfd868ba116598515c5a29.

* chore: generate libraries at Fri Aug 22 21:05:56 UTC 2025

* chore: Add owlbot preserve for native files

* Revert "chore: generate libraries at Fri Aug 22 21:05:56 UTC 2025"

This reverts commit b7890e1a7603edc345ed93a7bc36260cf5aaf50e.

* chore: generate libraries at Fri Aug 22 21:10:38 UTC 2025

* chore: Add owlbot preserve for native files

* Revert "chore: generate libraries at Fri Aug 22 21: